整理 CSS 以及用不到的檔案

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="flex justify-between items-center bg-blue-400 text-blue-100 text-xl px-2 py-4">
     <a href="/">
-        <i class="fab fa-trello"></i> Tello
+        <i class="fab fa-trello"> Tello</i>
     </a>
 
     <div>
