--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/flash' if notice %>
-    <%= yield %>
+    <section class="flex flex-col h-screen overflow-hidden">
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flash' if notice %>
+      <div class="overflow-auto h-full bg-blue-300">
+        <%= yield %>
+      </div>
+    </section>
   </body>
 </html>
